--- a/_posts/2024-02-09-102.md
+++ b/_posts/2024-02-09-102.md
@@ -6,17 +6,34 @@ description:
 episode: "102"
 tags: ["NoSQL","BazyRelacyjne","kubernetes","TPU","microsoft","ai","llm","asic","discord"]
 spreaker: 58606990
-apple: 
+apple: short-44/id1477067604?i=1000644727844
 newsletter:  |
+  Serwus!
+  Gotowy na podróż przez najgorętsze tematy technologiczne? W najnowszym odcinku **Patoarchitektów**, zabieramy Cię w fascynujący świat, gdzie linie między hardware'em a software'm zaczynają się zacierać, a sztuczna inteligencja wyznacza nowe kierunki rozwoju.
+  
+  Link do odcinka: <https://patoarchitekci.io/102/>
+  
+  Dowiesz się, jak **Discord** radzi sobie z obsługą milionów użytkowników bez zająknięcia, dzięki magicznemu duetowi Erlanga i Elixira. Zajrzymy za kulisy **Kubernetes The Hard Way**, by odkryć, jak zbudować Kubernetesa od zera i zrozumieć, jak to wszystko działa.
+  
+  Czy zastanawiałeś się, jak Microsoft planuje wykorzystać chipy do przyspieszenia swojej gry w AI?
+  
+  Na te i wiele innych pytań znajdziecie odpowiedzi, włączając się w naszą najnowszą dyskusję. Przygotujcie się na ładunek wiedzy, który może zmienić Wasze podejście do technologii, jaką znamy.
+  
+  Link do odcinka: <https://patoarchitekci.io/102/>
+  
+  Nie przegapcie pełnej dawki inspiracji i wiedzy, którą dla Was przygotowaliśmy. Kliknijcie [tutaj] i zanurzcie się razem z nami w świat, gdzie technologia spotyka przyszłość... na luzie i z humorem!
+  
+  Do następnego razu!
+  
   
 
   ## Posłuchaj odcinka na ⬇️
 
   ➡️ [WWW](https://patoarchitekci.io/102/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/68fZTk5B1rc6KYn3ROcpxS)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-44/id1477067604?i=1000644727844)
 
   ➡️ [YouTube]()
 ---
