--- a/_posts/2024-02-02-101.md
+++ b/_posts/2024-02-02-101.md
@@ -6,7 +6,7 @@ description:
 episode: "101"
 tags: ["kubernetes","webassembly","ai","aws","cdc","mySQL","llm","WellArchitectedFramework"]
 spreaker: 58450187
-apple: 
+apple: short-43/id1477067604?i=1000643764269
 newsletter:  |
   Serwus!
   
@@ -34,9 +34,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/101/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2gm2gOlY5oXjQkAMYqABuI)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-43/id1477067604?i=1000643764269)
 
   ➡️ [YouTube]()
 ---
