--- a/_posts/2024-02-16-103.md
+++ b/_posts/2024-02-16-103.md
@@ -6,7 +6,7 @@ description:
 episode: "103"
 tags: ["azure","kubernetes","DevSecOps","NoSQL","Exploity","OWASP"]
 spreaker: 58693191
-apple: 
+apple: devopssec-z-andrzejem-dyjakiem/id1477067604?i=1000645545741
 newsletter:  |
   Serwus!
   
@@ -36,9 +36,9 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/103/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/2A02Li5fewtGJ5HZNRLrdU)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/devopssec-z-andrzejem-dyjakiem/id1477067604?i=1000645545741)
 
   ➡️ [YouTube]()
 ---
