--- a/_posts/2024-02-16-103.md
+++ b/_posts/2024-02-16-103.md
@@ -55,6 +55,10 @@ Linki i ciekawe znaleziska:
 
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
 - [[22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)
+- [Andrzej Dyjak](https://dyjak.me)
+- [ABCD - Automatyzacja Bezpieczeństwa w CICD: DevSecOps](https://abcdevsecops.pl)
+- [Bezpieczny Kod - Doradztwo i Szkolenia](https://bezpiecznykod.pl)
+- [OTWA - Ofensywne Testowanie Web Aplikacji](https://ofensywnetestowanie.pl)
 - [Dynamic application security testing - Wikipedia](https://en.wikipedia.org/wiki/Dynamic_application_security_testing)
 - [Rapid7 Cybersecurity - Command Your Attack Surface](https://www.rapid7.com/)
 - [Acunetix  ](https://www.acunetix.com/)
