--- a/_posts/2024-02-16-103.md
+++ b/_posts/2024-02-16-103.md
@@ -10,6 +10,10 @@ apple: devopssec-z-andrzejem-dyjakiem/id1477067604?i=1000645545741
 newsletter:  |
   Serwus!
   
+  Zanim pójdziemy do odcinka to pamiętaj, że to ostatni moment na uczestnictwo w pierwszej edycji pato szkoleń:
+  - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql) prowadzone przez Szymona
+  - [[22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way) od Łukasz
+  
   W najnowszym odcinku  mamy coś wyjątkowego dla wszystkich entuzjastów technologii i bezpieczeństwa IT. 
   
   Tym razem naszym gościem jest Andrzej Dyjak – ekspert z dwudziestoletnim doświadczeniem w branży, który podzieli się z nami swoją wiedzą i spostrzeżeniami na temat bezpieczeństwa aplikacji w procesie wytwórczym.
