--- a/_posts/2024-02-23-104.md
+++ b/_posts/2024-02-23-104.md
@@ -6,17 +6,37 @@ description:
 episode: "104"
 tags: ["VisualStudioCode","APItesting","CI/CD","Slack","CellArchitecture","CyberSecurity","GitHub","RabbitMQ","Dust"]
 spreaker: 58773888
-apple: 
+apple: short-45/id1477067604?i=1000646486690
 newsletter:  |
+  Serwus!
+  Nowy odcinek już czeka na Ciebie w papce podcastowej, a wszystkie materiały znajdziesz jak zwykle tutaj: <https://patoarchitekci.io/104/>
+  
+  Co tym razem?
+  
+  **Rest Client w Visual Studio Code:**
+  Zacznijmy od czegoś dla deweloperów – jak Visual Studio Code z jego Rest Client może całkowicie zmienić sposób, w jaki pracujesz z REST API. To narzędzie, które nie tylko ułatwia życie, ale sprawia, że dokumentacja i testowanie stają się przyjemnością. Dowiesz się, jak efektywnie wykorzystać ten klient do maksymalizacji Twojej produktywności.
+  **Deep dive w API Testing:**
+  API testing to niezbędny element w arsenale każdego dewelopera. Podyskutujemy o najnowszych narzędziach i metodologiach, które pomagają w utrzymaniu wysokiej jakości kodu i bezproblemowym działaniu aplikacji. JUnit, Postman, i inne – jakie są ich mocne strony i kiedy warto po nie sięgnąć?
+  
+  **GitHub Copilot - Twoje nowe narzędzie:**
+  GitHub Copilot nie jest już tylko ciekawostką – to narzędzie, które rzeczywiście zmienia zasady gry w codziennym programowaniu. Pokażemy, jak może on wspierać Twój workflow, automatyzując i usprawniając pisanie kodu. Czy jest to przyszłość programowania? Z nami dowiesz się więcej.
+  
+  **Rabbit MQ - Czy warto?**
+  Rabbit MQ może wydawać się skomplikowany, ale w naszej dyskusji rozwiejemy wszelkie wątpliwości. Skupimy się na jego potencjale w skalowaniu aplikacji i porównamy z innymi rozwiązaniami na rynku. Czy jest to narzędzie, które zasługuje na miejsce w Twoim projekcie?
+  
+  **Cell Architecture - Nowy trend w Slack:**
+  Na koniec, deep dive w cell architecture – podejście, które zmienia sposób, w jaki myślimy o skalowalności i dostępności w dużych systemach. Przyjrzymy się, jak firmy takie jak Slack wykorzystują tę strategię do zarządzania swoją infrastrukturą.
+  
+  Miłego słuchania!
   
 
   ## Posłuchaj odcinka na ⬇️
 
   ➡️ [WWW](https://patoarchitekci.io/104/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6eyYQyhmolh9rYVGC9ZaL6)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/short-45/id1477067604?i=1000646486690)
 
   ➡️ [YouTube]()
 ---
