--- a/_posts/2024-03-01-105.md
+++ b/_posts/2024-03-01-105.md
@@ -48,8 +48,11 @@ Dyskutujemy także o nowinkach w świecie MySQL i wyzwaniach związanych z integ
 Linki i ciekawe znaleziska:
 
 - [AWS to Shut down Aurora Serverless v1, Their Sole Relational Database with Scaling Capacity to Zero - InfoQ](https://www.infoq.com/news/2024/01/aurora-serverless-v1-retirement/)
+- [The end of 0% interest rates: what the new normal means for engineering managers and tech leads](https://newsletter.pragmaticengineer.com/p/zirp-engineering-managers)
+- [Quality Assurance Across the Tech Industry](https://newsletter.pragmaticengineer.com/p/qa-across-tech)
+- [Introducing JavaScript support in MySQL](https://blogs.oracle.com/mysql/post/introducing-javascript-support-in-mysql)
 - [The pain points of building a copilot - Austin Z. Henley](https://austinhenley.com/blog/copilotpainpoints.html)
-- [Kube Admiral: Next Generation Cluster Orchestration Engine Based On Kuberntes](https://bytedance.larkoffice.com/docx/NkCXddM44oXSTnxeDeVcu6BfnFd)
+- [KubeAdmiral: Next-Generation Multi-Cluster Orchestration Engine Based on Kubernetes](https://bytedance.larkoffice.com/docx/NkCXddM44oXSTnxeDeVcu6BfnFd)
 - [Public Review Period for Proposed Implementer’s Draft of OpenID for Verifiable Credential Issuance - OpenID Foundation](https://openid.net/review-of-proposed-implementers-draft-of-openid-for-verifiable-credential-issuance/)
 - [Virtual Network support for Power Platform overview nullpreview) - Power Platform  ](https://learn.microsoft.com/en-us/power-platform/admin/vnet-support-overview)
 - [VMware Knowledge Base](https://kb.vmware.com/s/article/2107518)
