--- a/_posts/2024-01-19-99.md
+++ b/_posts/2024-01-19-99.md
@@ -48,6 +48,9 @@ Linki i ciekawe znaleziska:
 - [Distributed Transactions at Scale in Amazon DynamoDB](https://www.infoq.com/articles/amazon-dynamodb-transactions/)
 - [MySQL 8.2 Introduces Transparent Read/Write Splitting](https://www.infoq.com/news/2023/11/mysql-read-write-splitting)
 - [Polly v8 .NET Resilience Library: Resilience Pipelines, Built-in Telemetry, and More](https://www.infoq.com/news/2023/11/Polly-v8/)
+- [We analyzed 2 years of performance reviews for 13,000 workers. Here’s the proof that low-quality feedback is driving employee retention down  ](https://fortune.com/2023/10/09/analyzed-2-years-performance-reviews-13000-workers-proof-low-quality-feedback-driving-employee-retention-down-careers-snyder-yen)
+- [Why the performance review is dying out—including at companies like Apple and Microsoft](https://www.fastcompany.com/90943074/why-the-performance-review-is-dying-out-including-at-companies-like-apple-and-microsoft)
+- [More Harm Than Good: The Truth About Performance Reviews](https://www.gallup.com/workplace/249332/harm-good-truth-performance-reviews.aspx)
 
 ### Transkrypcja
 
