--- a/_posts/2024-03-29-109.md
+++ b/_posts/2024-03-29-109.md
@@ -46,6 +46,9 @@ Prześwietlamy także, jak Ruby on Rails jest obecnie postrzegane i jak dzięki 
 
 Linki i ciekawe znaleziska:
 
+- [Twitter Andrzeja](https://twitter.com/andrzejkrzywda)
+- [Instagram Andrzeja](https://www.instagram.com/andrzejkrzywda_po_polsku/)
+- [LinkedIn Andrzeja](https://www.linkedin.com/in/andrzejkrzywda/)
 - [Arkency Articles](https://blog.arkency.com/)
 - [Język programowania Ruby](https://www.ruby-lang.org/pl/)
 - [Ruby on Rails &mdash; A web-app framework that includes everything needed to create database-backed web applications according to the Model-View-Controller nullMVC) pattern.](https://rubyonrails.org/)
